# argus

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.claude/: settings.json
.gemini/hooks/: crg-session-start.sh  crg-update.sh
crates/argus-core/: Cargo.toml
crates/argus-core/src/: config.rs  logging.rs  session.rs
crates/argus-test-support/: Cargo.toml
crates/argus-test-support/src/: lib.rs  snapshots.rs  vt.rs
crates/argus-test-support/tests/: alacritty_engine_spike.rs  snapshot_harness.rs  terminal_acceptance.rs  vt_fixture.rs  wezterm_engine_spike.rs
crates/argus-test-support/tests/snapshots/: alacritty_engine_spike__alacritty_engine_visible_snapshots.snap  snapshot_harness__sample_renderer_frame.snap  terminal_acceptance__terminal_acceptance_scenarios.snap  vt_fixture__vt_transcript.snap  wezterm_engine_spike__wezterm_engine_visible_snapshots.snap
devlog/: 000001-chore-initial-scaffold.md  000002-chore-config-parser.md  000003-chore-test-harness.md  000004-docs-check-in-devlogs.md  000005-spike-terminal-engine-acceptance.md  000006-spike-wezterm-term-packaging.md  000007-feat-daemon-session-core.md  000008-feat-daemon-session-actor.md  000009-feat-session-api.md  000010-feat-daemon-session-manager.md  000011-feat-session-event-fanout.md  000012-feat-local-tui-session-view.md  000013-feat-tui-session-controls.md  000014-feat-local-unix-socket-api.md  000015-feat-daemon-first-tui.md  000016-codex-code-review-graph-files.md  000017-fix-tui-last-session-close.md  argus-design-doc.md  terminal-engine-compatibility-matrix.md
(+30 files in other folders)
