[package]
name = "argus-core"
description = "Shared session trait and types for Argus, the attention-routing terminal supervisor."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true

[lints]
workspace = true
