[package]
name = "argus-test-support"
description = "Reusable acceptance-test helpers for Argus renderer snapshots and terminal byte streams."
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
vte.workspace = true

[dev-dependencies]
insta.workspace = true
